--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,20 +10,20 @@ const pageTitle = "Kreative K";
     <span class="badge">Professional Artist</span>
     <h2>About</h2>
     <p>
-        Praesent malesuada mi nisi, quis tempus magna venenatis ut.
-        Suspendisse tempor sem at scelerisque congue. Curabitur mollis,
-        mi id molestie finibus, metus sem sagittis nunc, euismod feugiat orci neque non lorem.
-        Aenean sollicitudin erat eu molestie tempus. Nunc ac eros elementum, fermentum lacus at,
-        pellentesque mauris. Suspendisse eros neque, interdum euismod consectetur convallis,
-        porttitor at massa. Phasellus a ultrices arcu. Donec viverra, lorem in pellentesque euismod,
-        libero justo gravida nibh, non ultricies justo purus ultrices est.
-    </p>
-    <p>
-        Ut at interdum dui. Donec ut ante ex. Maecenas id ex eget nibh consequat accumsan.
-        Proin semper semper dui nec feugiat. Donec cursus neque id aliquet finibus. Morbi
-        facilisis turpis nibh, nec dictum orci dictum nec. In hac habitasse platea dictumst.
-        Maecenas mollis turpis vitae turpis bibendum, vitae tristique arcu eleifend.
-    </p>
+       Hello! I'm Kalpna
+
+Welcome to my creative sanctuary, where every corner is painted with the hues of imagination and every movement tells a story.
+I am not only an artist but a mother, homemaker, and a vibrant content creator, weaving the threads of my diverse roles into a 
+colorful tapestry of experiences. Art is more than just aesthetics; it's a way of living, learning, and evolving.
+Through my posts, I aim to explore how art enriches our lives, teaching us patience, focus, and the discipline necessary 
+to master any craft. Whether you're an aspiring artist or someone looking to add a splash of creativity to your day, join me.
+Dive into the diverse and vibrant ways art can offer more than just beauty—it can offer a pathway to a more disciplined and fulfilling
+life.Through my work as a dance teacher and performer, I explore the rhythms of life and share these insights with you.
+
+So, come along on this journey with me and my artistic life experiences to learn and let others learn from life as we know it.
+    
+    
+       
     <div class="center">
         <a href="/works/">
             <button class="btn">My portfolio</button>
