Update Navigation.astro nav logo

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -3,7 +3,9 @@ import ThemeIcon from './ThemeIcon.astro';
 ---
 <div class="navbar">
     <div class="navbar__title">
-        <a href="/">Kreative K</a>
+        <a href="/">
+            <img alt="site logo" src="/kklogo.png" />
+        </a>
     </div>
     <div class="navbar__menu">
         <a href="/works/">Blog</a>
