--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -4,7 +4,7 @@ import ThemeIcon from './ThemeIcon.astro';
 <div class="navbar">
     <div class="navbar__title">
         <a href="/">
-            <img alt="site logo" src="/kklogo.png" />
+            <img width="150" alt="site logo" src="/kklogotransparent.png" />
         </a>
     </div>
     <div class="navbar__menu">
